--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -7,6 +7,7 @@
     color: white;
     font-size: 1.3rem;
     flex: 1;
+    
    
 }
 
@@ -22,4 +23,15 @@
     height: 4px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.7) , 0px 5px 20px black;
     border-radius: 5px;
+}
+
+@media screen and (max-width:550px) {
+    .whatCrypt__Features__text div{
+        text-align: center;
+    }
+    .whatCrypt__Features__title{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
